@@ -1,3 +1,8 @@
+Development Portal (2018-09-24 shi)
+==============================
+Update print-friendly css of search filters section
+
+
 Development Portal (2018-09-22 shi)
 ==============================
 Fix firefox dropdown background
